objects/Account.object
<CustomObject
     >
    <fields>
        <fullName>ACH_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field populated with integration from celiego Added per Sarah Bostock</description>
        <label>ACH on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACV_Anywhere_Registration_Date__c</fullName>
        <label>ACV Anywhere Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACV_Capital_Customer2__c</fullName>
        <description>Testing Rollup Helper</description>
        <label>ACV Capital Customer2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACV_Capital_Customer__c</fullName>
        <description>Used by ACV Capital to track Customer Status for Account History Reports</description>
        <label>ACV Capital Customer</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>ACV Capital Referral</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACV_Capital_Declined__c</fullName>
        <inlineHelpText>Shows count of opportunities lost due to declined credit</inlineHelpText>
        <label>ACV Capital Declined</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>ACV Capital Referral</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Closed_Lost_Reason__c</field>
            <operation>equals</operation>
            <value>Not Credit Worthy</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACV_Capital_NS_Portfolio_ID__c</fullName>
        <description>CAP-916.  Filled by Celigo with Netsuite Data</description>
        <externalId>true</externalId>
        <inlineHelpText>Shows the Capital Portfolio ID from NetSuite</inlineHelpText>
        <label>ACV Capital NS Portfolio ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Capital_Primary_Contact_Email__c</fullName>
        <description>CAP-644: Grabs the Email from the associated Account of &apos;ACV Capital Primary Contact&apos;. Required to send welcome emails to clients who have purchased Orange Elite, Advantage, Floorplan, Accelerate Credit Products</description>
        <formula>ACV_Capital_Primary_Contact__r.Email</formula>
        <inlineHelpText>Grabs email from &apos;ACV Capital Primary Contact&apos;</inlineHelpText>
        <label>ACV Capital Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Capital_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACV Capital Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Capital Primary Contact)</relationshipLabel>
        <relationshipName>CapitalAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACV_Capital_Relationship__c</fullName>
        <formula>IF( ACV_Capital_Declined__c  &lt;&gt; 0, &quot;Credit Declined&quot;,

IF(
AND(ACV_Capital_Customer__c = 0, Open_ACV_Capital_Opptys__c = 0) , &quot;No Relationship&quot;,

IF(
AND(ACV_Capital_Customer__c = 0, Open_ACV_Capital_Opptys__c &gt;= 1) , &quot;Prospect&quot;,

IF(
AND(ACV_Capital_Customer__c &gt;= 1, Open_ACV_Capital_Opptys__c &gt;= 0) , &quot;Customer&quot;,

&quot;ERROR&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV Capital Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Capital_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field reflects the capital sales rep that would be assigned to a corresponding opportunity</description>
        <inlineHelpText>This field will be equivalent to &apos;capital sales rep&apos; from corresponding capital referral opportunity</inlineHelpText>
        <label>ACV Capital Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACV_Rank__c</fullName>
        <label>ACV Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFC__c</fullName>
        <label>AFC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ALT_PHONE__c</fullName>
        <label>ALT PHONE</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Activity_Status__c</fullName>
        <description>P0: New Customer = Joined in last 60; P1: Lapsed = no activity last 30; P2: Declining = last 30 activity is less than half average 30 day activity; P3: Churned = no activity last 90; Normal = regular activity based on monthly average</description>
        <formula>IF(  (TODAY() - DATEVALUE(Date_Joined__c)) &lt; 60, &quot;P0: New Customer&quot;,
 IF(  ISBLANK(Date_of_Last_Sale__c) &amp;&amp;  ISBLANK(Date_of_Last_Purchase__c), &quot;&quot;, 
  IF( 
   OR(
    Date_of_Last_Sale__c &lt; (TODAY() - 90) &amp;&amp; Date_of_Last_Purchase__c &lt; (TODAY() - 90),
    Date_of_Last_Sale__c &lt; (TODAY() - 90) &amp;&amp; ISBLANK(Date_of_Last_Purchase__c),
    Date_of_Last_Purchase__c &lt; (TODAY() - 90) &amp;&amp; ISBLANK(Date_of_Last_Sale__c)
   ),
   &quot;P3: Churned&quot;,

   IF(
    OR(
    Date_of_Last_Sale__c &lt; (TODAY() - 30) &amp;&amp; Date_of_Last_Purchase__c &lt; (TODAY() - 30),
    Date_of_Last_Sale__c &lt; (TODAY() - 30) &amp;&amp; ISBLANK(Date_of_Last_Purchase__c),
    Date_of_Last_Purchase__c &lt; (TODAY() - 30) &amp;&amp; ISBLANK(Date_of_Last_Sale__c)
   ),
   &quot;P1: Lapsed&quot;,

    IF(
     (Last_30_Days_Bought__c + Actual_Rolling_30_Day_Sales_Volume__c) &lt; ((Purchases_All_Time__c + Wholesale_Units_Sold__c) / ((TODAY() - 
     DATEVALUE(Date_Joined__c)) / 30) / 2), 
     &quot;P2: Declining&quot;,

     &quot;Normal&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>P0: New Customer = Joined in last 60; 
P1: Lapsed = no activity last 30; 
P2: Declining = last 30 activity is less than half average 30 day activity; 
P3: Churned = no activity last 90; 
Normal = regular activity based on monthly average</inlineHelpText>
        <label>Account Activity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Management_Next_Steps__c</fullName>
        <description>Used to track the next steps needed on this account.  Is populated/overwritten each time a retention &amp; ignition record is logged on an account</description>
        <label>Account Management Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Record_type_Conversion__c</fullName>
        <description>Record Type Id captured from Lead during conversion</description>
        <label>Account Record type (Conversion)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Prospect Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acct_Owner_ID__c</fullName>
        <description>Stamps Account Owner ID - used for process builder related to comparing Account Owner and Contact Owner.</description>
        <formula>CASESAFEID( Owner.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquires_Inventory_From__c</fullName>
        <label>Acquires Inventory From</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auction</fullName>
                </value>
                <value>
                    <fullName>Wholesalers</fullName>
                </value>
                <value>
                    <fullName>New Car Direct</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Needed__c</fullName>
        <description>used by the dealer doc team to track the action taken on specific accounts this will be a static field and this data should not be edited</description>
        <label>Action Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACV Call (P8)</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Cimato Call</fullName>
                </value>
                <value>
                    <fullName>Deactivate (D90)</fullName>
                </value>
                <value>
                    <fullName>IST Call</fullName>
                </value>
                <value>
                    <fullName>New - No Action</fullName>
                    <label>New-No Action</label>
                </value>
                <value>
                    <fullName>OST Visit</fullName>
                </value>
                <value>
                    <fullName>SAI Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_ACV_Capital_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CAP-916 Indicates the dealer has an active ACV Capital portfolio in Netsuite.  Data filled by Celigo Integration</description>
        <inlineHelpText>Indicates the dealer has an active ACV Capital portfolio in NetSuite</inlineHelpText>
        <label>Active ACV Capital Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Transporter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used by the transportation team to denote which transporter accounts are active and which are not active and should be deleted.</description>
        <inlineHelpText>Uncheck the box to have this account deleted</inlineHelpText>
        <label>Active Transporter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Month_Buy_Revenue__c</fullName>
        <label>Actual Month Buy Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Month_End_Selling_Revenue__c</fullName>
        <label>Actual Month End Selling Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Month_To_Date_Selling_Revenue__c</fullName>
        <label>Actual Month To Date Selling Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Month_to_Date_Buy_Revenue__c</fullName>
        <label>Actual Month to Date Buy Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Rolling_30_Day_Sales_Volume__c</fullName>
        <description>Used in a declarative roll up summary to determine how many sales have been made the past 30 days. DATA MAY NOT BE CORRECTLY CALCULATED PER BILL SUTTON</description>
        <inlineHelpText>Count of the number of Successful Auctions the last 30 days</inlineHelpText>
        <label>Actual Rolling 30 Day Sales Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acv_Auctions_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACV Auctions Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Syndication_Provider__c</fullName>
        <label>Ad &amp; Syndication Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AutoUpLink Tech</fullName>
                </value>
                <value>
                    <fullName>HomeNet</fullName>
                </value>
                <value>
                    <fullName>Dealer.com</fullName>
                </value>
                <value>
                    <fullName>DealerOn</fullName>
                </value>
                <value>
                    <fullName>DealerSocket</fullName>
                </value>
                <value>
                    <fullName>Dealer Specialties</fullName>
                </value>
                <value>
                    <fullName>VAuto</fullName>
                </value>
                <value>
                    <fullName>VinSolutions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advantage_Terms__c</fullName>
        <defaultValue>45</defaultValue>
        <description>Used by Capital to indicate the Advantage Terms</description>
        <inlineHelpText>Used by Capital to indicate the Advantage Terms</inlineHelpText>
        <label>Advantage Terms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Time_Arb_Rate_Formula__c</fullName>
        <formula>All_Time_Arbs__c / Purchases_All_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Time Arb Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Time_Arb_Rate__c</fullName>
        <label>All Time Arb Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Time_Arbs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>All Time Arbs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Time_Sales_Gross__c</fullName>
        <defaultValue>0</defaultValue>
        <description>gross count of a sellers sales</description>
        <label>All Time Sales (Gross)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ally_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Capital to indicate if titles must be approved through Ally first.  Added as part of CAP-465.</description>
        <label>Ally Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Bank_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Bank Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Comptroller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Comptroller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Transport_City__c</fullName>
        <description>Alternate transport city - used in Alternate Transport Address Formula</description>
        <label>Alternate Transport City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Transport_Country__c</fullName>
        <description>Alternate transport country - used in Alternate Transport Address Formula</description>
        <label>Alternate Transport Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Transport_State__c</fullName>
        <description>Alternate transport state - used in Alternate Transport Address Formula</description>
        <label>Alternate Transport State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Transport_Street__c</fullName>
        <description>Alternate transport street - used in Alternate Transport Address Formula</description>
        <label>Alternate Transport Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Transport_Zipcode__c</fullName>
        <description>Alternate transport zipcode - used in Alternate Transport Address Formula</description>
        <label>Alternate Transport Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Transporter_Address__c</fullName>
        <formula>Alternate_Transport_Street__c &amp; BR() &amp;  Alternate_Transport_City__c &amp; &quot;, &quot; &amp; Alternate_Transport_State__c &amp; BR()&amp;  Alternate_Transport_Zipcode__c &amp; BR()&amp; Alternate_Transport_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Transporter Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Unit_Purchased__c</fullName>
        <label>Annual Unit Purchased</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Unit_Sales__c</fullName>
        <label>Annual Unit Sales</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_sales_Volume__c</fullName>
        <description>This field indicates the Annual Sales Volume input during initial registration of the dealership. This field is populated with data from Internal Tools during the Source of Truth Data migration</description>
        <label>Annual sales Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arbitration_Percent_Last_90_Days__c</fullName>
        <formula>Arbitration_Volume_Past_90_Days__c / Purchase_Volume_Past_90_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arbitration Percent Last 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Arbitration_Volume_Past_90_Days__c</fullName>
        <label>Arbitration Volume Past 90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asi_Dealership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the dealership is only using ASI</description>
        <inlineHelpText>Indicator for this account if they are an ASI only dealership</inlineHelpText>
        <label>ASI Dealership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Association_Coupon_s_Redeemed__c</fullName>
        <inlineHelpText>Select the Correct Association Coupon and Year that is being Redeemed</inlineHelpText>
        <label>Association Coupon(s) Redeemed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Association_Coupons_Reedemed</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Association_Membership__c</fullName>
        <inlineHelpText>Enter the name of the Association(s) the Dealer is a member of. i.e. NADA, NIADA, NABD</inlineHelpText>
        <label>Association Membership</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automove_Seller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Privilege checkbox indicating if a dealership is an automove Seller. This field is mapped to the dealership_privileges table in acv_prod under privilege id 6.</description>
        <label>Automove Seller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autoship_Buyer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Privilege checkbox indicating if a dealership is an autoship buyer. This field is mapped to the dealership_privileges table in acv_prod under privilege id 3.</description>
        <label>Autoship Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Sell_Volume__c</fullName>
        <formula>Potential_Monthly_Sell_Volume__c - Actual_Rolling_30_Day_Sales_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between the Potential Monthly Sell Volume and the Actual Rolling 30 Days Sell Volume</inlineHelpText>
        <label>Available Sell Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blitz_Trade_Show_Sign_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the dealer as being signed up via a blitz or trade show. used to notify BDRs not to mark accounts as inactive since blitz and marketing team are completing demo.</description>
        <label>Blitz/Trade Show Sign Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_Fee_Rate_Card_Name__c</fullName>
        <description>OMS-111 Displays the Rate Card name associated with the account.  Field created by Pablo Suter and deployed by Ashley Reilly</description>
        <formula>Buy_Fee_Rate_Card__r.Display_Name__c</formula>
        <label>Buy Fee Rate Card Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_Fee_Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buy Fee Rate Card</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Rate_Card__c.Fee_Type__c</field>
                <operation>equals</operation>
                <value>Buyer Fee</value>
            </filterItems>
            <filterItems>
                <field>Rate_Card__c.Approval_Status__c</field>
                <operation>notEqual</operation>
                <value>Draft, In Review</value>
            </filterItems>
            <filterItems>
                <field>Rate_Card__c.Rate_Card_State__c</field>
                <operation>notEqual</operation>
                <value>Legacy, Archived</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Rate_Card__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Compliance_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xBuyer Compliance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Profile_from_ACV__c</fullName>
        <description>Value pushed from Tools</description>
        <inlineHelpText>Indicates the Dealer needs to be reviewed before moving forward with Auction.</inlineHelpText>
        <label>Buyer Profile</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_s_Assurance_Exceptions__c</fullName>
        <description>Used for New Buyer&apos;s Assurance Upsell Strategy</description>
        <inlineHelpText>First time offense = &quot;Goodwill&quot;
Second time offense = &quot;Retro Charge&quot;
Third time offense = &quot;Deny&quot;</inlineHelpText>
        <label>Buyer&apos;s Assurance Exceptions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Goodwill</fullName>
                </value>
                <value>
                    <fullName>Retro Charge</fullName>
                </value>
                <value>
                    <fullName>Deny</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buyer_s_Total_Auctions__c</fullName>
        <description>This field is generated using DLRS</description>
        <label>Buyer&apos;s Total Auctions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAM_Team__c</fullName>
        <label>CAM Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAM Great Lakes</fullName>
                </value>
                <value>
                    <fullName>CAM Northeast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSIRCD__WatchDOGResult__c</fullName>
        <label>WatchDOG Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Potential Match</fullName>
                </value>
                <value>
                    <fullName>True Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Called_Re_Dealer_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Called Re: Dealer Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Haul_Motorcycles__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can this carrier haul motorcycles - Checked= true - manually populated field filled out by users - future field may be populated upon sign up.</description>
        <label>Can Haul Motorcycles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capital_Alt_Email_1__c</fullName>
        <label>Capital Alt Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Capital_Alt_Email_2__c</fullName>
        <label>Capital Alt Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Capital_Alt_Email_3__c</fullName>
        <label>Capital Alt Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Capital_Dealer_Flag__c</fullName>
        <formula>IF(  ISPICKVAL(Capital_Dealer_Type__c, &quot;Capital Orange Elite&quot;), 
IMAGE(&quot;https://acvauctions--uat--c.documentforce.com/servlet/servlet.ImageServer?id=01501000000HfAq&amp;oid=00D010000004b0z&amp;lastMod=1633012136000&quot;, &quot;Orange&quot;, 30, 30),NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag to indicate if this is an Orange Elite Dealer</inlineHelpText>
        <label>Capital Dealer Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Dealer_Type__c</fullName>
        <label>Capital Dealer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capital Orange Elite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cargo_Insurance_Amount__c</fullName>
        <description>Cargo insurance Amount held by transporter - may be used to determine additional insurance rider amounts for jobs.</description>
        <label>Cargo Insurance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carrier_Has_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carrier Has Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier_Insurance_Expiration__c</fullName>
        <label>Carrier Insurance Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carrier_Status__c</fullName>
        <label>Carrier Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>First Look</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cars_Stocked__c</fullName>
        <description>Populated upon lead covert</description>
        <label>Cars on Lot</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseSafe_Id__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafe_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Dispatch__c</fullName>
        <label>Central Dispatch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAR__c</fullName>
        <label>Billing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAV__c</fullName>
        <label>Billing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BRDI__c</fullName>
        <label>Billing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BTZ__c</fullName>
        <label>Billing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAR__c</fullName>
        <label>Shipping Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAV__c</fullName>
        <label>Shipping Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SRDI__c</fullName>
        <label>Shipping Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__STZ__c</fullName>
        <label>Shipping Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Acct_Location__c</fullName>
        <inlineHelpText>For commercial client use, only.  Indicates lot number, city, dealership - whatever it is the commercial client uses to identify specific location.</inlineHelpText>
        <label>Commercial Acct Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_BK__c</fullName>
        <description>Created for Capital Credit Decisioning.  Jira Ticket CAP-453</description>
        <label>Commercial BK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>